# ff

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  ApplicationWindow.qml  CHANGELOG.md  CLAUDE.md  Features.hs  Features.rst  Makefile  README.md  brittany.yaml  changelog.md  deb-build.sh  debianizer.sh  docker_build.sh  docker_deb.sh  ff.cabal  fourmolu.yaml  makefile  package.yaml  shell.nix  stack-TODO-qtah.yaml  stack.yaml
.ff/note/457OFM10BN2-24NUHR86AE/: B3Q7Q460T3H28-2003401L5E5UG  B3Q9P6V37MEQU-2007I32C1N1QI  B3QDUMSHQP7HV-2003401L5E5UG  b3q7063p4a6de-2005crp400492
.ff/note/457OFTMBBKM-24NUHR86AE/: B3QDUMSHPC0S3-2003401L5E5UG  b3q7063p404me-2005crp400492
.ff/note/457ofm0wbn2-24nuhr86ae/: 45j0uq8ejb4-1o0qtcmpbk  45wj4d9to65-12z3opnykw  470cucf3kbc-12z3opnykw
.ff/note/457oftmbbkm-24nuhr86ae/: 457oftmbc9w-24nuhr86ae  45bglvdz1xa-24nuhr86ae  45j0urtf40m-1o0qtcmpbk  45wj4ebpcv7-12z3opnykw  46uwc0jh7oy-24nuhr86ae
.ff/note/45B2V772N07-1333OPN2L/: B3Q783730JNTF-2003401L5E5UG  B3QDUMSHNRT3M-2003401L5E5UG
.ff/note/45D9148FP33-1333OPN2L/: B3Q7Q476CNHT3-2003401L5E5UG  B3QDUMSHL0NPK-2003401L5E5UG
.ff/note/45DI70MPSK2-24NUHR86AE/: B3Q9P35P6C7KM-2003401L5E5UG  B3QDUMSHQSSF7-2003401L5E5UG  b3q7063p477t2-2005crp400492
.ff/note/45E5BE92I4D-1333OPN2L/: B3QDUMSHE2KLL-2003401L5E5UG
.ff/note/45KKI53IBH1-1333OPN2L/: B3Q7Q45SJIOHT-2003401L5E5UG  B3Q9P6V3JVHMM-2007I32C1N1QI  B3QDUMSHLJ4A8-2003401L5E5UG
.ff/note/45L712HR8AL-1333OPN2L/: B3Q9P6QS1J33-2007I32C1N1QI  B3QDUMSHIEK2E-2003401L5E5UG
.ff/note/45MI3AJ91V2-24NUHR86AE/: B3Q7Q45VU26QK-2003401L5E5UG  B3Q9P6V9H6F2A-2007I32C1N1QI  B3QDUMSHI5BMV-2003401L5E5UG
.ff/note/45b2v76ymw7-12z3opnykw/: 45b2v76ynq2-12z3opnykw  45if0dru78s-1o0qtcmpbk  45j0uoi9obg-1o0qtcmpbk  45wj4g89rlc-12z3opnykw  470cucidp87-12z3opnykw
.ff/note/45b2v772n07-1333opn2l/: b3q7063p4t48u-2005crp400492
.ff/note/45d9148fp33-1333opn2l/: b3q7063p3umbk-2005crp400492
.ff/note/45d9148fpz3-12z3opnykw/: 45d9148fqfd-12z3opnykw  45kkhovz8xd-12z3opnykw  45ktxm5lh2o-12z3opnykw  (+3 more)
.github/: FUNDING.yml
.github/workflows/: haskell.yaml
debian/: changelog  ff.install
doc/: NaturalTaskOrder.md  arch.plantuml
dockers/cradle-for-deb/: Dockerfile
dockers/debiaizer/: Dockerfile  docker-compose.yml
dockers/debianizer/: Dockerfile  README.md  docker-compose.yml
dockers/ff-ubuntu-16.04/: Dockerfile
dockers/ff-ubuntu-18.04/: Dockerfile
exe/: Main.hs  Options.hs
exe/ff/: Config.hs  Main.hs
exe/ff-gui/: Main.hs
exe/ff-qt/: Main.hs
ff/: Main.hs  ff.cabal  package.yaml
ff-brick/: Main.hs  ff-brick.cabal
ff-core/: Features.hs  ff-core.cabal  package.yaml
ff-core/lib/: FF.hs
ff-core/lib/Data/: FullMap.hs
ff-core/lib/Data/Aeson/: Extra.hs
ff-core/lib/FF/: CLI.hs  Config.hs  CrdtAesonInstances.hs  Github.hs  Options.hs  Serve.hs  Storage.hs  Types.hs  Types2.hs  UI.hs  Upgrade.hs
ff-core/lib/FF/Types/: Internal.hs
ff-core/test/: ArbitraryOrphans.hs  Main.hs
ff-deb/debian/: control  copyright  ff.dirs  ff.manpages
ff-deb/docs/: ff.1
ff-gtk/: Main.hs  ff-gtk.cabal
ff-hsqml/: Main.hs  ff-hsqml.cabal
ff-qml/: ff-qml.cabal
ff-qt/: .gitignore  Builder.hxx  Cpp.hs  DateComponent.cpp  DateComponent.cxx  DateComponent.hpp  DateComponent.hxx  FFI.hs  LinkButton.cpp  LinkButton.cxx  LinkButton.hpp  LinkButton.hxx  Main.hs  MainWindow.cpp  MainWindow.cxx  MainWindow.hpp  MainWindow.hxx  Model.cxx  Model.hxx  NoteModel.hs  TaskActionsBar.cxx  TaskActionsBar.hxx  TaskActionsButton.cpp  TaskActionsButton.cxx  TaskActionsButton.hpp  TaskActionsButton.hxx  TaskListWidget.cpp  TaskListWidget.cxx  TaskListWidget.hpp  TaskListWidget.hxx  TaskWidget.cpp  TaskWidget.cxx  TaskWidget.hpp  TaskWidget.hxx  ff-qt.cabal  package.yaml  proxy.cpp  proxy.hpp  util.hxx
ff-qt/FF/Qt/: TaskListModel.hs
ff-qt/FFI/: Cxx.cxx  Cxx.hxx  Haskell.hs
ff-qt/exe/: Main.hs
ff-qtah/: Main.hs  ff-qtah.cabal
ff-qtah/FF/: Qt.hs
ff-qtah/FF/Qt/: DateComponent.hs  EDSL.hs  MainWindow.hs  TaskListModel.hs  TaskListWidget.hs  TaskWidget.hs
ff-test/: .gitignore  ff-test.cabal  package.yaml
ff-test/FF/: Test.hs
ff-test/ff.dump/note/: 457OFM10BN2-24NUHR86AE  457OFTMBBKM-24NUHR86AE  45B2V772N07-1333OPN2L  45D9148FP33-1333OPN2L  45DI70MPSK2-24NUHR86AE  45E5BE92I4D-1333OPN2L  45KKI53IBH1-1333OPN2L  45L712HR8AL-1333OPN2L  45MI3AJ91V2-24NUHR86AE  469CFUHSQDK-1333OPN2L  46ANI2J1V-1333OPN2L  46L1AFKB35A-1333OPN2L  46LV31F38FC-24NUHR86AE  46LV4P12B3G-24NUHR86AE  46M8LGE4H34-1333OPN2L  46O3L7J92E6-1333OPN2L  46QA671MK06-24NUHR86AE  46QBJ4T9LPQ-24NUHR86AE  46QH1GF170E-1333OPN2L  46V019N7V38-24NUHR86AE  46V019N81BA-24NUHR86AE  46V019N891-24NUHR86AE  46V019N8GC4-24NUHR86AE  46V019N8LAQ-24NUHR86AE  46V019N8V2C-24NUHR86AE  46V019N916M-24NUHR86AE  46V019N96EQ-24NUHR86AE  46V019N9CKE-24NUHR86AE  46V019N9K5-24NUHR86AE  46V019N9Q78-24NUHR86AE  46V019NA37-24NUHR86AE  46V019NACKS-24NUHR86AE  46V019NAHUI-24NUHR86AE  46V0CJ3JM2A-24NUHR86AE  46V1BOT7KM-24NUHR86AE  470LG4Q5CHH-1333OPN2L  470LG4Q5GND-1333OPN2L  470LO3TS1BH-1333OPN2L  470LPGSKQR8-1333OPN2L  470LPGSKVVQ-1333OPN2L  (+215 more)
ff-test/ff.dump/tag/: B3QF5412J997L-2003401L5E5UG  B3QF5412J9BQL-2003401L5E5UG  B3QF5412J9CSS-2003401L5E5UG  B3QF5412JA3MV-2003401L5E5UG  B3QF5412JC521-2003401L5E5UG  B3QF5412JE97U-2003401L5E5UG  B3QF5412JEAA7-2003401L5E5UG  B3QF5412JGAT6-2003401L5E5UG  B3QF5412JGC3B-2003401L5E5UG  B3QF5412JHMAS-2003401L5E5UG  B3QF5412JKPF3-2003401L5E5UG  B3QF5412JMLCH-2003401L5E5UG  B3QF5412JOGOR-2003401L5E5UG  B3QH2E695MAIF-2003401L5E5UG
ff-test/test/: ArbitraryOrphans.hs  Config.hs  Database.hs  Gen.hs  Main.hs  Readme.hs  Regression.hs
ff-test/test/FF/Test/: Common.hs  Options.hs
ff-upgrade/: .gitignore  TestJson2Ron.hs  package.yaml
images/: ff.systems.logo.odg
lib/: FF.hs
lib/Data/: Pair.hs
lib/FF/: Config.hs  CrdtAesonInstances.hs  Document.hs  Options.hs  Storage.hs  Types.hs  UI.hs
ron-storage/: ron-storage.cabal
ron-storage-fs/: ron-storage-fs.cabal
ron-storage-fs/RON/: Storage.hs
ron-storage/RON/: Storage.hs
ron-storage/RON/Storage/: IO.hs  Test.hs
test/: Main.hs  deps.py  script
(+993 files in other folders)
