cabal-version: 3.4
name: ff-brick
version: 0
build-type: Simple

executable ff-brick
  -- global
  build-depends:
    base,
    brick,
    containers,
    generic-lens,
    microlens-mtl,
    ron-storage,
    text,
    vector,
    vty,

  -- project
  build-depends: ff-core
  default-language: GHC2024
  ghc-options: -threaded
  main-is: Main.hs
