cabal-version: >= 1.10

name: ff-core
version: 0
copyright:
    2018      Yuriy Syrovetskiy, Nikolay Loginov;
    2019-2021 Yuriy Syrovetskiy

build-type: Simple

library
    build-depends:
        -- global
        aeson-pretty,
        aeson,
        async,
        base,
        bytestring,
        containers,
        directory,
        filepath,
        github,
        gitrev,
        hashable,
        mtl,
        optparse-applicative,
        pager,
        pretty-simple,
        prettyprinter-ansi-terminal,
        prettyprinter,
        random,
        shellwords,
        temporary,
        terminal-size,
        text,
        time,
        typed-process,
        unordered-containers,
        vector,
        yaml,

        -- organization
        ron,
        ron-rdt,
        ron-schema,
        ron-storage

    default-language: Haskell2010
    exposed-modules:
        FF
        FF.CLI
        FF.Config
        FF.Github
        FF.Options
        FF.Types
        FF.UI
        FF.Upgrade
    other-modules:
        Data.Aeson.Extra
    hs-source-dirs: lib

test-suite features
    build-depends:
        base,
        blaze-html,
        interpolate
    default-language: Haskell2010
    main-is: Features.hs
    type: exitcode-stdio-1.0
