cabal-version:  >= 1.10

name:           ff-gtk
version:        0.12

build-type:     Simple

flag gtk
    description: Build ff-gtk package
    default: True
    manual: True

executable ff-gtk
    if flag(gtk)
        buildable: True
    else
        buildable: False

    build-depends:
        -- global
        base,
        containers,
        haskell-gi >= 0.22.4,
            -- not direct dependency, but via gi-gtk-declarative
            -- 0.22.4 fixes https://github.com/haskell-gi/haskell-gi/issues/230
        gi-gtk,
        gi-gtk-declarative,
        gi-gtk-declarative-app-simple,
        lens,
        mtl,
        pipes,
        text,
        vector,
        -- organization
        ron-rdt,
        ron-storage,
        -- project
        ff-core
    default-language: Haskell2010
    ghc-options: -threaded
    main-is: Main.hs
