cabal-version: 2.2

name: ff-qt
version: 0.9

build-type: Simple
extra-source-files:
    DateComponent.hpp
    MainWindow.hpp
    proxy.hpp
    TaskActionsButton.hpp
    TaskListWidget.hpp
    TaskWidget.hpp

executable ff-qt
    c-sources:
        DateComponent.cpp
        MainWindow.cpp
        proxy.cpp
        TaskActionsButton.cpp
        TaskListWidget.cpp
        TaskWidget.cpp
    cc-options: -std=c++11 -Wall -Wextra -pedantic -Werror
    default-language: Haskell2010

    build-depends:
        -- global
        base,
        bytestring,
        containers,
        inline-c,
        inline-c-cpp,
        template-haskell,
        text,
        time,

        -- organization
        ron-storage,

        -- project
        ff-core

    ghc-options: -fPIC -threaded
    main-is: Main.hs
    other-modules:
        Cpp
        FFI
        Paths_ff_qt

    if os(linux)
        extra-libraries: Qt5Core Qt5Gui Qt5Widgets
        extra-lib-dirs:
            -- Ubuntu on Travis
            /opt/qt512/lib
        include-dirs:
            -- Ubuntu on Travis
            /opt/qt512/include
            /opt/qt512/include/QtCore
            /opt/qt512/include/QtWidgets
            -- latest Ubuntu
            /usr/include/x86_64-linux-gnu/qt5
            /usr/include/x86_64-linux-gnu/qt5/QtCore
            /usr/include/x86_64-linux-gnu/qt5/QtWidgets
    if os(osx)
        cc-options: -Qunused-arguments
            -- ignore unused arguments warning from clang
        ghc-options:
            -framework-path=/usr/local/opt/qt5/lib
            -framework=QtCore
            -framework=QtGui
            -framework=QtWidgets
        include-dirs:
            /usr/local/opt/qt5/include
            /usr/local/opt/qt5/include/QtCore
            /usr/local/opt/qt5/include/QtWidgets
