cabal-version: 2.2

name: ff-qt
version: 0.11

build-type: Simple

extra-source-files:
    Builder.hxx
    DateComponent.hxx
    FFI/Cxx.hxx
    LinkButton.hxx
    MainWindow.hxx
    Model.hxx
    TaskActionsBar.hxx
    TaskListWidget.hxx
    TaskWidget.hxx
    util.hxx

common language
    build-depends: base
    default-language: Haskell2010

library ff-qt-ffi
    import: language
    build-depends:
        -- global
        time,
        -- organization
        ron-storage,
        -- project
        ff-core
    other-modules:
        FFI.Haskell

executable ff-qt
    import: language
    build-depends:
        -- global
        containers,
        inline-c,
        inline-c-cpp,
        template-haskell,
        text,
        time,
        -- organization
        ron-storage,
        -- project
        ff-core,
        -- package
        ff-qt-ffi
    cxx-sources:
        DateComponent.cxx
        LinkButton.cxx
        MainWindow.cxx
        Model.cxx
        TaskActionsBar.cxx
        TaskListWidget.cxx
        TaskWidget.cxx
        util.cxx
    cxx-options: -pedantic -std=c++11 -Wall -Wextra -Werror
    ghc-options: -optc=-std=c++11 -pgmc=clang++
    main-is: Main.hs
    other-modules:
        Cpp
        Paths_ff_qt

    if os(linux)
        extra-libraries: Qt5Core Qt5Gui Qt5Widgets
        extra-lib-dirs:
            -- Ubuntu on Travis
            /opt/qt512/lib
        include-dirs:
            -- Ubuntu on Travis
            /opt/qt512/include
            /opt/qt512/include/QtCore
            /opt/qt512/include/QtWidgets
            -- latest Ubuntu
            /usr/include/x86_64-linux-gnu/qt5
            /usr/include/x86_64-linux-gnu/qt5/QtCore
            /usr/include/x86_64-linux-gnu/qt5/QtWidgets
            -- Arch Linux
            /usr/include/qt
            /usr/include/qt/QtCore
            /usr/include/qt/QtWidgets
    if os(osx)
        cc-options: -Qunused-arguments
            -- ignore unused arguments warning from clang
        extra-framework-dirs: /usr/local/opt/qt5/lib
        frameworks: QtCore QtGui QtWidgets
        include-dirs:
            /usr/local/opt/qt5/include
            /usr/local/opt/qt5/include/QtCore
            /usr/local/opt/qt5/include/QtWidgets
