cabal-version: 2.2

name: ff-qtah
version: 0

common language
  build-depends: base
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable ff-qtah
  import: language
  build-depends:
    -- global
    bytestring,
    containers,
    hoppy-runtime,
    qtah,
    stm,
    -- qtah-qt5,
    text,
    time,
    -- organization
    ron-rdt,
    ron-storage,
    -- project
    ff-core,
  ghc-options: -dynamic
  main-is: Main.hs
  other-modules:
    FF.Qt
    FF.Qt.DateComponent
    FF.Qt.MainWindow
    FF.Qt.TaskListWidget
    FF.Qt.TaskWidget
    Paths_ff_qtah
