cabal-version: 3.8
name:          ff-qtah
version:       0

common language
  build-depends:    base
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable ff-qtah
  import:        language

  -- global
  build-depends:
    , bytestring
    , containers
    , hoppy-runtime
    , qtah-qt6
    , stm
    , text
    , time

  -- organization
  build-depends:
    -- , ron-rdt
    , ron-storage

  -- project
  build-depends: ff-core
  ghc-options:   -dynamic
  main-is:       Main.hs
  other-modules:
    FF.Qt
    FF.Qt.DateComponent
    FF.Qt.MainWindow
    FF.Qt.TaskListWidget
    FF.Qt.TaskWidget
    Paths_ff_qtah
