cabal-version: 3.8
name:          ff-test
version:       0

test-suite ff-test
  -- global
  build-depends:
    , aeson
    , base
    , bytestring
    , cmark
    , containers
    , directory
    , filepath
    , github
    , hedgehog
    , interpolate
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-th
    , temporary
    , text
    , time
    , vector
    , yaml

  -- organization
  build-depends:
    , ron
    , ron-rdt
    , ron-storage

  -- project
  build-depends:    ff-core
  default-language: GHC2024
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Config
    Database
    FF.Test.Common
    Gen
    Readme
    Regression
