cabal-version: >= 1.2

name: ff
version: 0.13
copyright:
    2018 Yuriy Syrovetskiy, Nikolay Loginov;
    2019 Yuriy Syrovetskiy

build-type: Simple

executable ff
    build-depends:
        -- global
        base >= 4 && < 4.13,

        -- project
        ff-core
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules: Paths_ff
