cabal-version: 3.8
name:          ff
version:       0.16
copyright:
  2018 Yuriy Syrovetskiy, Nikolay Loginov;
  2019-2020, 2026 Yuriy Syrovetskiy

build-type:    Simple

executable ff
  -- global
  build-depends: base >=4

  -- project
  build-depends: ff-core
  ghc-options:   -rtsopts
  main-is:       Main.hs
  other-modules: Paths_ff
