name: ron-storage
version: 0

build-type: Simple
cabal-version: >= 1.2

library
    build-depends:
        -- global
        base,
        binary,
        bytestring,
        containers,
        directory,
        filepath,
        lens,
        mtl,
        network-info,
        -- organization
        ron
    exposed-modules:
        RON.Storage
        RON.Storage.IO
        RON.Storage.Test
